# vat-validator

./: .travis.yml  CONTRIBUTING.rst  LICENSE  LICENSE.rst  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: api-reference.rst  conf.py  contributing.rst  index.rst  license.rst  readme.rst  requirements.txt
requirements/: dev.txt
tests/: test_countries.py  test_utils.py  test_validate_vat.py  test_validators.py  test_vies.py
tests/data/: AT_INVALID.txt  AT_VALID.txt  BE_INVALID.txt  BE_VALID.txt  BG_INVALID.txt  BG_VALID.txt  CY_INVALID.txt  CY_VALID.txt  CZ_INVALID.txt  CZ_VALID.txt  DE_INVALID.txt  DE_VALID.txt  DK_INVALID.txt  DK_VALID.txt  EE_VALID.txt  EL_INVALID.txt  EL_VALID.txt  FI_INVALID.txt  FI_VALID.txt  FR_INVALID.txt  FR_VALID.txt  HR_INVALID.txt  HR_VALID.txt  HU_INVALID.txt  HU_VALID.txt  IE_INVALID.txt  IE_VALID.txt  IT_INVALID.txt  IT_VALID.txt  LT_INVALID.txt  LT_VALID.txt  LU_INVALID.txt  LU_VALID.txt  LV_INVALID.txt  LV_VALID.txt  MT_INVALID.txt  MT_VALID.txt  NL_INVALID.txt  NL_VALID.txt  PL_INVALID.txt  (+10 more)
vat_validator/: __init__.py  countries.py  rules.py  sanitizers.py  utils.py  validators.py  vies.py
vatval/: rules.py  utils.py
