[metadata]
name = vat-validator
version = 0.1.1
description = VAT validation library
author = Afonso Silva
author-email = ajcerejeira@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/ajcerejeira/vat-validator/
project-urls =
    Documentation = https://vat-validator.readthedocs.io/
    Source = https://github.com/ajcerejeira/vat-validator/
    Tracker = https://github.com/ajcerejeira/vat-validator/issues
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial
    Topic :: Security :: Cryptography
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.4
test_suite = tests

[options.extras_require]
testing =
    black
    flake8
    isort
    tox

[flake8]
exclude = .git, *venv*, *dist*, *.tox*

[isort]
skip = .git, venv, dist, .tox

[tox]
envlist = py35, py36, py37, black, docs, flake8, isort
skip_missing_interpreters = true

[testenv]
commands = python setup.py test
deps =

[testenv:black]
commands = black -l 80 .
deps = black

[testenv:docs]
changedir = docs
commands = make html
deps = -r docs/requirements.txt
whitelist_externals = make

[testenv:isort]
commands = isort --check-only
deps = isort

[testenv:lint]
commands = flake8
deps = flake8
